added working on/off PSM switch

--- a/Thermostat.html
+++ b/Thermostat.html
@@ -9,29 +9,21 @@
 i want to see the current temperature here!!
 </h1>
 
-<main class="grid">
-  <section class="display">
-    <increase_button>
+    <increasebutton>
       <button class="increaseBy">+</button>
-    </increase_button>
-  </section>
-</main>
+    </increasebutton>
 
+    <decreasebutton>
+      <input type="button" value="-">
+    </decreasebutton>
 
-<!-- <decreasebutton>
-<input type="button" value="-">
-</decreasebutton>
+    <resetbutton>
+      <input type="button" value="Reset">
+    </resetbutton>
 
-
-<resetbutton>
-<input type="button" value="Reset">
-</resetbutton>
-
-
-<PSMbutton>
-<input type="button" value="Power Saving Mode">
-</PSMbutton> -->
-
+    <PSMbutton>
+      Power Saving Mode:<input type="checkbox" checked>
+    </PSMbutton>
 
 <script type="text/javascript" src="src/Thermostat.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
