we can increase the temperature setting

--- a/Thermostat.html
+++ b/Thermostat.html
@@ -10,7 +10,7 @@ i want to see the current temperature here!!
 </h1>
 
     <increasebutton>
-      <button class="increaseBy">+</button>
+      <button class="increaseBy" onclick="increase()">+</button>
     </increasebutton>
 
     <decreasebutton>
