can now decrease temp on webpage

--- a/Thermostat.html
+++ b/Thermostat.html
@@ -14,7 +14,7 @@ i want to see the current temperature here!!
     </increasebutton>
 
     <decreasebutton>
-      <input type="button" value="-">
+      <button class="decreaseBy" onclick="decrease()">-</button>
     </decreasebutton>
 
     <resetbutton>
