can now reset and change psm on/off, edited readme slighly

--- a/Thermostat.html
+++ b/Thermostat.html
@@ -18,11 +18,11 @@ i want to see the current temperature here!!
     </decreasebutton>
 
     <resetbutton>
-      <input type="button" value="Reset">
+      <button class="reset" onclick="reset()">Reset</button>
     </resetbutton>
 
     <PSMbutton>
-      Power Saving Mode:<input type="checkbox" checked>
+      Power Saving Mode:<input type="checkbox" onclick="psm()" checked>
     </PSMbutton>
 
 <script type="text/javascript" src="src/Thermostat.js"></script>
