JQuery, added working button funtions

--- a/Thermostat.html
+++ b/Thermostat.html
@@ -26,7 +26,8 @@ i want to see the current temperature here!!
     </PSMbutton>
 
 <script type="text/javascript" src="src/Thermostat.js"></script>
-<script type="text/javascript" src="app/app.js"></script>
+<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="JQapp.js"></script>
 
 </body>
 </html>
